[package]
name = "thearesia"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "A GitHub bot written in Rust"
repository = "https://github.com/mgattozzi/thearesia.git"
homepage = "https://github.com/mgattozzi/thearesia"

[dependencies]
failure = "*"
futures = "*"
serde = "*"
serde_json = "*"
serde_derive = "*"
hyper = "*"
hyper-rustls = "*"
tokio-core = "*"
lazy_static = "*"
dotenv = "*"

[dependencies.github-rs]
git = "https://github.com/mgattozzi/github-rs"
branch = "issues-params"
